assignment value and Variable
value and Variable

--- a/AssociatingJS /index.html
+++ b/AssociatingJS /index.html
@@ -2,11 +2,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>This is my first HTML page.</title>
+		<title>Seeing Whats Under the Hood</title>
+		<link rel="stylesheet"hr="css/style.css"type="text/css"/>
 		<script src="js/script.js"> </script>
 	</head>
 	<body>
-
+         <script src = "js/script</script>
 
 	</body>
 </html>
