Starting file for week #2
Week #2

--- a/Beverly-Leefort_Johnnetta_Expressions_Assignment/index.html
+++ b/Beverly-Leefort_Johnnetta_Expressions_Assignment/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title assignment[expression]></title>
-    <script src = "js/script.js"></script>
+    <title></title>
+
 </head>
 <body>
 
