--- a/assignment [value and variable]/index.html
+++ b/assignment [value and variable]/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Seeing Whats Under the Hood</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <title Variable></title>
 </head>
 <body>
     <script src="js/script.js"></script>
